<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_route_data_provider"
        android:layout_width="@dimen/dp_36"
        android:layout_height="@dimen/dp_36"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_55"
        android:padding="@dimen/dp_8"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        style="@style/SP16BoldMediumBlackTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_55"
        android:gravity="center"
        android:textDirection="locale"
        android:text="@string/data_provider"
        android:textColor="@color/color_medium_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_bottom"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_1"
        android:layout_marginTop="@dimen/dp_4"
        android:background="@color/color_view_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_route_data_provider" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_esri"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_56"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/dp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_bottom">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_esri"
            style="@style/SP16RegularWhiteTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:textDirection="locale"
            android:text="@string/esri"
            android:textColor="@color/color_medium_black" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_esri"
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_20"
            android:src="@drawable/ic_radio_button_unchecked" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_here"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_56"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/dp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_esri">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_here"
            style="@style/SP16RegularWhiteTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:textDirection="locale"
            android:text="@string/here"
            android:textColor="@color/color_medium_black" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_here"
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_20"
            android:src="@drawable/ic_radio_button_unchecked" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_grab"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_56"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/dp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_here">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_grab"
            style="@style/SP16RegularWhiteTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/grab"
            android:gravity="start"
            android:textDirection="locale"
            android:textColor="@color/color_medium_black" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_grab"
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_20"
            android:src="@drawable/ic_radio_button_unchecked" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_open_data"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_56"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/dp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_grab">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_open_data"
            style="@style/SP16RegularWhiteTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/open_data"
            android:gravity="start"
            android:textDirection="locale"
            android:textColor="@color/color_medium_black" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_open_data"
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_20"
            android:src="@drawable/ic_radio_button_unchecked" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>