...
                app:rippleColor="@null"
                app:strokeWidth="0dp" />
        </com.google.android.material.button.MaterialButtonToggleGroup>
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_political_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        app:layout_constraintTop_toBottomOf="@+id/card_color_scheme">

        <androidx.appcompat.widget.AppCompatImageView
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_search_location"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_political_description"
            style="@style/SP13HintRegularTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:textDirection="locale"
            android:lines="1"
...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_search"
                    app:layout_constraintStart_toEndOf="@+id/iv_search"
                    app:layout_constraintTop_toTopOf="@+id/iv_search">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_search_country"
                        style="@style/SearchTextMedium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/search"
                        android:lines="1"
                        android:maxLines="1"
...

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_political_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>
...
