...
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/flag_arg"
        android:layout_marginTop="@dimen/dp_12"
        android:textDirection="locale"
        app:layout_constraintEnd_toStartOf="@+id/rb_country"
        app:layout_constraintStart_toEndOf="@id/tv_country"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="Mike’s Wings London" />

    <androidx.appcompat.widget.AppCompatTextView
...
