...
    <string name="label_hindi" translatable="false">हिन्दी</string>
    <string name="region">Region</string>
    <string name="mode_light">Light</string>
    <string name="mode_dark">Dark</string>
    <string name="label_political_view">Political view</string>
    <string name="label_map_representation_for_different_countries">Map representation for different countries</string>
    <string name="description_arg">Argentina\'s view on the Southern Patagonian Ice Field and Tierra Del Fuego, including the Falkland Islands, South Georgia, and South Sandwich Islands</string>
    <string name="description_egy">Egypt\'s view on Bir Tawil</string>
    <string name="description_ind">India\'s view on Gilgit-Baltistan</string>
    <string name="description_ken">Kenya\'s view on the Ilemi Triangle</string>
    <string name="description_mar">Morocco\'s view on Western Sahara</string>
    <string name="description_rus">Russia\'s view on Crimea</string>
    <string name="description_sdn">Sudan\'s view on the Halaib Triangle</string>
...
