...
                    android:textDirection="locale"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rb_japanese" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rb_arabic"
                    style="@style/SP16RegularWhiteTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_56"
                    android:button="@null"
                    android:text="@string/label_arabic"
                    android:drawableEnd="@drawable/ic_radio_button_unchecked"
...
